# ufc-stats-checker

./: CMakeLists.txt  FemaleFighter.cpp  FemaleFighter.h  Fight.cpp  Fight.h  FightRecord.cpp  FightRecord.h  FightStats.cpp  FightStats.h  Fighter.cpp  Fighter.h  GrapplingStats.cpp  GrapplingStats.h  MaleFighter.cpp  MaleFighter.h  NonTitleFight.cpp  NonTitleFight.h  PhysicalAttributes.cpp  PhysicalAttributes.h  README.md  Referee.cpp  Referee.h  StrikingStats.cpp  StrikingStats.h  TitleFight.cpp  TitleFight.h  WinsBy.cpp  WinsBy.h  full_ufc_data.csv  main.cpp  reduced_ufc_data.csv
